task4/jitfailure-ffc_form_6481b35a7efcb57980d9a71ff1cd401fc356afab/error.log
/tmp/tmptvx4x4g4/ffc_form_6481b35a7efcb57980d9a71ff1cd401fc356afab.cpp: In member function ‘virtual void ffc_form_6481b35a7efcb57980d9a71ff1cd401fc356afab_cell_integral_main_otherwise::tabulate_tensor(double*, const double* const*, const double*, int) const’:
/tmp/tmptvx4x4g4/ffc_form_6481b35a7efcb57980d9a71ff1cd401fc356afab.cpp:102:18: error: redeclaration of ‘const double J_c0’
     const double J_c0 = coordinate_dofs[0] * FE7_C0_D01_Q1[0][0][0] + coordinate_dofs[2] * FE7_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmptvx4x4g4/ffc_form_6481b35a7efcb57980d9a71ff1cd401fc356afab.cpp:94:18: note: ‘const double J_c0’ previously declared here
     const double J_c0 = coordinate_dofs[0] * FE7_C0_D01_Q1[0][0][0] + coordinate_dofs[2] * FE7_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmptvx4x4g4/ffc_form_6481b35a7efcb57980d9a71ff1cd401fc356afab.cpp:103:18: error: redeclaration of ‘const double J_c3’
     const double J_c3 = coordinate_dofs[1] * FE7_C0_D01_Q1[0][0][0] + coordinate_dofs[5] * FE7_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmptvx4x4g4/ffc_form_6481b35a7efcb57980d9a71ff1cd401fc356afab.cpp:95:18: note: ‘const double J_c3’ previously declared here
     const double J_c3 = coordinate_dofs[1] * FE7_C0_D01_Q1[0][0][0] + coordinate_dofs[5] * FE7_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmptvx4x4g4/ffc_form_6481b35a7efcb57980d9a71ff1cd401fc356afab.cpp:104:18: error: redeclaration of ‘const double J_c1’
     const double J_c1 = coordinate_dofs[0] * FE7_C0_D01_Q1[0][0][0] + coordinate_dofs[4] * FE7_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmptvx4x4g4/ffc_form_6481b35a7efcb57980d9a71ff1cd401fc356afab.cpp:96:18: note: ‘const double J_c1’ previously declared here
     const double J_c1 = coordinate_dofs[0] * FE7_C0_D01_Q1[0][0][0] + coordinate_dofs[4] * FE7_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmptvx4x4g4/ffc_form_6481b35a7efcb57980d9a71ff1cd401fc356afab.cpp:105:18: error: redeclaration of ‘const double J_c2’
     const double J_c2 = coordinate_dofs[1] * FE7_C0_D01_Q1[0][0][0] + coordinate_dofs[3] * FE7_C0_D01_Q1[0][0][1];
                  ^~~~
/tmp/tmptvx4x4g4/ffc_form_6481b35a7efcb57980d9a71ff1cd401fc356afab.cpp:97:18: note: ‘const double J_c2’ previously declared here
     const double J_c2 = coordinate_dofs[1] * FE7_C0_D01_Q1[0][0][0] + coordinate_dofs[3] * FE7_C0_D01_Q1[0][0][1];
                  ^~~~
